[package]
name = "s3-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.23"
core_affinity = "0.8.0"
futures = "0.3.26"
hyper = { version = "0.14.24", features = ["full"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
num_cpus = "1"
percent-encoding = "2.2.0"
ring = "0.16.20"
tokio = { version = "1.25.0", features = ["full", "mio"] }
tower = "0.4.13"
tracing = "0.1.37"
url = "2.3.1"
